<resources>
    <string name="app_name">Tic Tac Toe (Online)</string>
    <string name="tic_tac_toe_game">Best Of Luck ...!</string>
    <string name="start_game">Start Game Offline</string>
    <string name="or">Or</string>
    <string name="create_game_online">Create Game Online</string>
    <string name="enter_game_id">Enter Game Id</string>
    <string name="join_game_online">Join Game Online</string>
</resources>