<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/deep_primary"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tic_tac_toe_game"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="10dp"
        android:text="@string/start_game"
        android:layout_marginTop="20dp"
        android:id="@+id/btnStartGame"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:background="@drawable/button_bg"
        android:textColor="@color/deep_primary"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_height="wrap_content"
        android:text="@string/create_game_online"
        android:layout_marginTop="20dp"
        android:id="@+id/btnCreateGameOnline"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:background="@drawable/button_bg"
        android:textColor="@color/deep_primary"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gameIdInput"
        android:textSize="24sp"
        android:hint="@string/enter_game_id"
        android:maxLength="4"
        style="bold"
        android:textColor="@color/white"
        android:inputType="number"
        android:padding="8dp"
        android:textColorHint="#989797"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_height="wrap_content"
        android:text="@string/join_game_online"
        android:layout_marginTop="20dp"
        android:id="@+id/btnJoinGameOnline"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:background="@drawable/button_bg"
        android:textColor="@color/deep_primary"
        />
</LinearLayout>